Enforce findbug and checkstyle under utils
Change-Id: I3598bd00429565b11f5fa1913efe70634ccd5b36
Signed-off-by: Claudio D. Gasparini <claudio.gasparini@pantheon.tech>